[package]
name = "joy_bug"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] } 