[package]
name = "joybug"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
# Web server dependencies
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json", "blocking"] } 
# windows symbols
pelite = "0.10.0"
thiserror = "1.0"
msvc-demangler = "0.11.0"
symsrv = "0.5"
pdb = "0.8"
async-trait = "0.1"
# disassembly
capstone = "0.12"